--- a/apps/deimos/src/styles.css
+++ b/apps/deimos/src/styles.css
@@ -1,1 +1,13 @@
 /* You can add global styles to this file, and also import other style files */
+
+.message-right {
+  margin-left: auto;
+  border-radius: 7px 0 0 7px;
+  background-color: hsl(0, 0%, 70%);
+}
+
+.message-left {
+  margin-right: auto;
+  border-radius: 0 7px 7px 0;
+  background-color: hsl(0, 0%, 90%);
+}
