--- a/apps/app/styles/globals.css
+++ b/apps/app/styles/globals.css
@@ -1,1 +1,9 @@
 /* Global styles */
+.header-register .lazy-load-image-background.blur.lazy-load-image-loaded {
+  width: 100%;
+}
+
+.header-register .lazy-load-image-background.blur.lazy-load-image-loaded img {
+  width: 100%;
+  height: 160px;
+}
